# discord_plotter

./: README.md  pyproject.toml
discord_plotter/: __init__.py  core.py
