[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "discord_plotter"
version = "0.2.1"
description = "A lightweight module to send Matplotlib figures to Discord via Webhook."
readme = "README.md"
requires-python = ">=3.7"
authors = [
  {name = "Ali Emre Senel", email = "aliemre@senel.biz"}
]
dependencies = [
  "requests",
  "matplotlib",
  "python-dotenv",
  "pillow"
]

[tool.setuptools.packages.find]
where = ["."]
